src/sass/Accordion.scss
.accordion {
  .table {
    display: flex;
    flex-wrap: wrap;
    .row {
      display: flex;
      flex: 1 1 100%;
      height: 40px;
      box-sizing: border-box;
      border-bottom: 1px solid rgb(224, 224, 224);
      max-width: 100%;
      .col {
        @extend .t3;
        font-weight: $light;
        flex: 1 1 auto;
        margin: 18px 0 0 0;
        box-sizing: border-box;
        white-space: nowrap;
        &:nth-child(2) {
          @extend .dots;
          flex: 0 1 auto;
          margin: 18px 0 0 18px;
        }
      }
    }
  }
}

.acc-header {
  padding: 15px 0 0 0;
  border-bottom: 1px solid rgb(224, 224, 224);
  button {
    width: 100%;
    background: transparent !important;
    display: flex !important;
    flex-direction: row-reverse;
    justify-content: flex-end;
    align-items: center;
  }
  .material-icons {
    flex: 0 1 30px;
  }
}

.offerer {
  font-weight: 100;
  .offerer-info {
    padding: 15px 0 0 0;
    display: flex;
    .picture {
      flex: 0 0 auto;
      width: 70px;
      height: 70px;
      margin-right: 15px;
      border-radius: 50%;
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center center;
    }
    .offerer-main {
      height: 70px;
      display: flex;
      flex-direction: column;
      justify-content: space-around;
      & > div {
        @extend .dots;
      }
    }
  }
  .offerer-brief {
    padding: 15px 0 30px;
    line-height: 24px;
  }
}

@media screen and (min-width: $desktop-min) {
  .accordion {
    .table {
      .row {
        flex: 1 1 50%;
        max-width: 100%;
        min-width: 300px;
        .col {
          font-weight: $light;
          flex: 1 1 auto;
          margin: 18px 0 0 0;
          box-sizing: border-box;
          white-space: nowrap;
          &:nth-child(2) {
            flex: 0 1 auto;
            margin: 18px 0 0 5px;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
          }
        }
      }
    }
  }

  .acc-header {
    // @extend .h6;
    padding: 16px 0 0 0;
    border-bottom: 1px solid rgb(224, 224, 224);
    button {
      width: 100%;
      background: transparent !important;
      display: flex !important;
      flex-direction: row-reverse;
      justify-content: flex-end;
      align-items: center;
    }
    .material-icons {
      flex: 0 1 30px;
    }
  }

  .offerer {
    padding: 25px 0 0 0;
    display: flex;
    flex-direction: column;
    .offerer-info {
      .picture {
        width: 90px;
        height: 90px;
        margin-right: 60px;
      }
      .offerer-main {
        height: 90px;
      }
    }
    .offerer-brief {
      padding: 30px 0 0 150px;
      line-height: 31px;
    }
  }
}

@media screen and (min-width: 1004px) {
  .accordion {
    .table {
      .row {
        max-width: 50%;
        &:nth-child(2n) {
          .col:nth-child(1) {
            margin: 18px 0 0 15px;
          }
        }
        &:nth-child(2n + 1) {
          .col:nth-child(2) {
            margin: 18px 15px 0 5px;
          }
        }
      }
    }
  }
}

